--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/asuransi/asuransi.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/asuransi/asuransi.component.html
@@ -1,3 +1,91 @@
-<p>
-  asuransi works!
-</p>
+<mdb-card class="mb-3">
+  <mdb-card-body>
+
+    <h5 class="text-primary font-weight-bold">Asuransi</h5>
+
+    <div class="row">
+      <label class="col-3 small">Branch Area Code</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Branch Code</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Customer Facility - No.</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Insurance Polis No.</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Insurance Company</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Insurance Holder</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Currency Code</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Start Date</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Maturity Date</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Insurance Amt(Orig)</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Insurance Amt(Base)</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Premium Amt(Orig)</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Premium Amt(Base)</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Narrative</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+  </mdb-card-body>
+</mdb-card>
