--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/daftar-biaya-co/daftar-biaya-co.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/daftar-biaya-co/daftar-biaya-co.component.html
@@ -1,3 +1,7 @@
-<p>
-  daftar-biaya-co works!
-</p>
+<mdb-card class="mb-3">
+  <mdb-card-body>
+
+    <h5 class="text-primary font-weight-bold">Commitment And Overline Fee Inquiry</h5>
+
+  </mdb-card-body>
+</mdb-card>
