--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/daftar-detail-collateral/daftar-detail-collateral.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/daftar-detail-collateral/daftar-detail-collateral.component.html
@@ -1,3 +1,25 @@
-<p>
-  daftar-detail-collateral works!
-</p>
+<mdb-card class="mb-3">
+  <mdb-card-body>
+
+    <h5 class="text-primary font-weight-bold">Daftar Jaminan Fasilitas - Collateral</h5>
+
+    <div class="row">
+      <label class="col-3 small">Facility #</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Amount</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 small">Holder</label>
+      <label class="col-2 small">:</label>
+      <label class="col-7 small"></label>
+    </div>
+
+  </mdb-card-body>
+</mdb-card>
