--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/fasilitas-nasabah/fasilitas-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/fasilitas/komponen/fasilitas-nasabah/fasilitas-nasabah.component.html
@@ -275,5 +275,100 @@
       <label class="col-2 small">-</label>
     </div>
 
+    <!-- Informasi Colectibillity  -->
+    <h5 class="text-primary font-weight-bold">Collectibillity</h5>
+
+
+    <div class="row">
+      <label class="col-2 small">Economic Sector</label>
+      <span></span>
+      <label class="col-1 small">9990</label>
+      <span></span>
+      <label class="col-3 small">Lain-Lain, Lainnya</label>
+      <span></span>
+      <label class="col-2 small">Industry Code</label>
+      <span></span>
+      <label class="col-1 small">9990</label>
+      <span></span>
+      <label class="col-3 small">Lain-Lain, Lainnya</label>
+    </div>
+
+
+    <div class="row">
+      <label class="col-2 small">Location Code 1</label>
+      <span></span>
+      <label class="col-1 small">0991</label>
+      <span></span>
+      <label class="col-3 small">Semarang, Kota</label>
+      <span></span>
+      <label class="col-2 small">Type Of Use</label>
+      <span></span>
+      <label class="col-1 small">89</label>
+      <span></span>
+      <label class="col-3 small">Kredit Konsumsi Lainnya</label>
+    </div>
+
+
+    <div class="row">
+      <label class="col-2 small">Collectibillity</label>
+      <span></span>
+      <label class="col-1 small">2</label>
+      <span></span>
+      <label class="col-3 small">Dalam Perhatian Khusus</label>
+      <span></span>
+      <label class="col-2 small">Owner Classification</label>
+      <span></span>
+      <label class="col-1 small">907</label>
+      <span></span>
+      <label class="col-3 small">Perseorangan Penduduk</label>
+    </div>
+
+
+    <div class="row">
+      <label class="col-2 small">Characteristics</label>
+      <span></span>
+      <label class="col-1 small">L</label>
+      <span></span>
+      <label class="col-3 small">97-Lainnya Dengan PK</label>
+      <span></span>
+      <label class="col-2 small">Credit Class</label>
+      <span></span>
+      <label class="col-1 small">2</label>
+      <span></span>
+      <label class="col-3 small">NON KUK</label>
+    </div>
+
+
+    <div class="row">
+      <label class="col-2 small">Location Code 2</label>
+      <span></span>
+      <label class="col-1 small">1</label>
+      <span></span>
+      <label class="col-3 small">Terdapat Dalam Sandi Lokasi</label>
+      <span></span>
+      <label class="col-2 small">Guarantor Class</label>
+      <span></span>
+      <label class="col-1 small">000</label>
+      <span></span>
+      <label class="col-3 small">Tanpa Golongan Penjamin</label>
+    </div>
+
+
+    <div class="row">
+      <label class="col-2 small">Security Portion</label>
+      <span></span>
+      <label class="col-1 small">0000</label>
+      <span></span>
+      <label class="col-3 small">Dijaminkan Sebesar 0%</label>
+      <span></span>
+      <label class="col-2 small">Legality Type</label>
+      <span></span>
+      <label class="col-1 small">99</label>
+      <span></span>
+      <label class="col-3 small">Lainnya</label>
+    </div>
+
+
+
   </mdb-card-body>
 </mdb-card>
