--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -63,12 +63,9 @@
                 </mat-tab>
 
                 <mat-tab label="RELASI CIF">
-                  <mat-tab-group>
-                    <mat-tab label="First"> Content 1 </mat-tab>
-                    <mat-tab label="Second"> Content 2 </mat-tab>
-                    <mat-tab label="Third"> Content 3 </mat-tab>
-                  </mat-tab-group>
+                  <app-relasi-cif></app-relasi-cif>
                 </mat-tab>
+
                 <mat-tab label="ALAMAT TAMBAHAN">
                   <mat-tab-group>
                     <mat-tab label="First"> Content 1 </mat-tab>
