--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -67,25 +67,15 @@
                 </mat-tab>
 
                 <mat-tab label="ALAMAT TAMBAHAN">
-                  <mat-tab-group>
-                    <mat-tab label="First"> Content 1 </mat-tab>
-                    <mat-tab label="Second"> Content 2 </mat-tab>
-                    <mat-tab label="Third"> Content 3 </mat-tab>
-                  </mat-tab-group>
+                  <app-alamat-tambahan></app-alamat-tambahan>
                 </mat-tab>
+
                 <mat-tab label="PESAN">
-                  <mat-tab-group>
-                    <mat-tab label="First"> Content 1 </mat-tab>
-                    <mat-tab label="Second"> Content 2 </mat-tab>
-                    <mat-tab label="Third"> Content 3 </mat-tab>
-                  </mat-tab-group>
+                  <app-pesan></app-pesan>
                 </mat-tab>
+
                 <mat-tab label="PRODUK">
-                  <mat-tab-group>
-                    <mat-tab label="First"> Content 1 </mat-tab>
-                    <mat-tab label="Second"> Content 2 </mat-tab>
-                    <mat-tab label="Third"> Content 3 </mat-tab>
-                  </mat-tab-group>
+                  <app-produk></app-produk>
                 </mat-tab>
 
               </mat-tab-group>
