--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -8,59 +8,86 @@
 
         <mdb-card class="mb-3">
           <mdb-card-body>
-            <!--input 1-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Pilih Kriteria</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <!-- <div class="col-3 pt-2"> -->
-              <div class="form-check">
-                <mat-radio-group class="example-radio-group" [(ngModel)]="favoriteOption">
-                  <mat-radio-button class="example-radio-button" *ngFor="let option of options" [value]="option">
-                    {{option}}
-                  </mat-radio-button>
-                </mat-radio-group>
-                <!-- <div class="example-selected-value">Your favorite season is: {{favoriteOption}}</div> -->
-              </div>
-            </div>
-            <!--input 1-->
-            <!--input 2-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Masukkan Nilai</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input #inputSearch type="text" class="form-control"></div>
-              <div class="input-group-append" id="button-addon4">
-                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" style="width: 60px"
-                  (click)="cariFunction(inputSearch.value)" mdbWavesEffect>Cari</button>
-              </div>
-            </div>
+            <form [formGroup]="validatingForm">
+              <!--input 1-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Pilih Kriteria</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <!-- <div class="col-3 pt-2"> -->
+                <div class="col-8 radio ml-3 mt-2">
+                  <label><input type="radio" name="optradio" checked> Kode Nasabah</label><br>
+                  <label><input type="radio" name="optradio"> Kode Cabang</label><br>
+                  <label><input type="radio" name="optradio"> No Kartu Identitas</label><br>
+                  <label><input type="radio" name="optradio"> Alamat</label><br>
+                  <label><input type="radio" name="optradio"> Nama Nasabah + </label><br>
+                  <label>Tanggal Lahir</label>
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" color="primary" size="md">
+                      </div>
+                    </div>
+                    <input mdbValidate class="form-control" formControlName="inputTanggal" [matDatepicker]="picker" id="inputTanggal"
+                      placeholder="Tanggal Lahir">
+                    <mat-datepicker #picker></mat-datepicker>
+                    <div class="input-group-append">
+                      <button mdbBtn color="primary" size="md" class="m-0 px-3 py-2" type="button" id="btnCalendar"
+                        mdbWavesEffect (click)="picker.open()"><i class="fa fa-calendar"></i></button>
+                    </div>
 
-            <div>
-              <hr>
-            </div>
-            <div class="form-group row">
-              <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Pembuatan Nasabah Baru</label>
-            </div>
-            <div class="form-group row">
-              <span class="col-2"></span>
-              <div class="col-3" style="height: 40px;">
-                <mat-form-field style="width: 250px;">
-                  <mat-select [(value)]="selected">
-                    <mat-option>None</mat-option>
-                    <mat-option value="option1">Corporate</mat-option>
-                    <mat-option value="option2">Individual</mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-              <div class="input-group-append" id="button-addon4">
-                <button [attr.disabled]="selected ? null : ''" (click)="onClick()" mdbBtn color="primary" size="sm"
-                  class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
-              </div>
-            </div>
+                  </div>
 
+
+                </div>
+              </div>
+              <!--input 1-->
+              <!--input 2-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Masukkan Nilai</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3"><input #inputSearch type="text" class="form-control" formControlName="inputCari"></div>
+                <div class="input-group-append" id="button-addon4">
+                  <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" style="width: 60px"
+                    mdbWavesEffect>Cari</button>
+                </div>
+              </div>
+
+              <div>
+                <hr>
+              </div>
+              <div class="form-group row">
+                <label class="col-3 col-form-label font-weight-bold">Pembuatan Nasabah Baru</label>
+              </div>
+              <div class="form-group row">
+
+                <div class="col-3">
+                    <select class="form-control" id="selectOption">
+                        <option value="individual">Individual</option>
+                        <option value="corporate">Corporate</option>
+                      </select>
+                </div>
+                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
+                <span class="col-6"></span>
+              </div>
+              <!-- <div class="form-group row">
+                <span class="col-2"></span>
+                <div class="col-3" style="height: 40px;">
+                  <mat-form-field style="width: 250px;">
+                    <mat-select [(value)]="selected" class="form-control" formControlName="control">
+                      <mat-option>None</mat-option>
+                      <mat-option value="option1">Corporate</mat-option>
+                      <mat-option value="option2">Individual</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+                <div class="input-group-append" id="button-addon4">
+                  <button [attr.disabled]="selected ? null : ''" (click)="onClick()" mdbBtn color="primary" size="sm"
+                    class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
+                </div>
+              </div> -->
+            </form>
           </mdb-card-body>
         </mdb-card>
-
-        <!-- NEW  -->
 
         <span style="height: 10vh;"></span>
       </div>
