--- a/src/app/nasabah/pencarian-nasabah/produk/produk.component.html
+++ b/src/app/nasabah/pencarian-nasabah/produk/produk.component.html
@@ -1,3 +1,298 @@
-<p>
-  produk works!
-</p>
+<!-- Start your project here-->
+<div class="d-flex flex-column h-100">
+  <div id="outer" class="d-flex flex-column flex-grow">
+    <div class="card konten">
+      <div class="card-body">
+
+        <mdb-card class="mb-3">
+          <mdb-card-body>
+
+            <mdb-card class="mb-3">
+              <mdb-card-body>
+
+                <h5 class="text-primary font-weight-bold">Pembuatan Rekening Baru</h5>
+
+                <div class="row">
+                  <label class="col-2 font-weight-bold">Jenis Rekening</label>
+                  <label>:</label>
+                  <mat-select placeholder="Select an option" class="col-3">
+                    <mat-option value="1">Option1</mat-option>
+                    <mat-option value="2">Option2</mat-option>
+                  </mat-select>
+                </div>
+
+                <div class="row">
+                  <label class="col-2 font-weight-bold">Mata Uang</label>
+                  <label>:</label>
+                  <mat-select placeholder="Select an option" class="col-3">
+                    <mat-option value="1">Option1</mat-option>
+                    <mat-option value="2">Option2</mat-option>
+                  </mat-select>
+                </div>
+
+                <div class="row">
+                  <label class="col-2 font-weight-bold">No Rekening</label>
+                  <label>:</label>
+                  <input type="text" class="form-control col-3">
+                </div>
+
+                <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+                  <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Tambah Baru</button>
+                </div>
+
+              </mdb-card-body>
+            </mdb-card>
+
+            <!-- Pencarian Nasabah -->
+            <mdb-card class="mb-3">
+              <mdb-card-body>
+
+                <h5 class="text-primary font-weight-bold">Pencarian Nasabah</h5>
+
+                <div class="row">
+                  <label class="col-2 font-weight-bold">Pilih Kriteria</label>
+                  <label>:</label>
+                  <mat-radio-group class="example-radio-group col-3" [(ngModel)]="chosenValue">
+                    <mat-radio-button class="example-radio-button" *ngFor="let element of kriteria" [value]="element">
+                      {{element}}
+                    </mat-radio-button>
+                  </mat-radio-group>
+                  <section class="example-section col-3">
+                    <mat-checkbox class="example-margin" [(ngModel)]="checked">Checked</mat-checkbox>
+                  </section>
+                  <mat-form-field class="col-3">
+                    <input matInput [matDatepicker]="picker2" placeholder="Choose a date" style="width: 250px;">
+                    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker2></mat-datepicker>
+                  </mat-form-field>
+                </div>
+
+                <div class="row">
+                  <label class="col-2 font-weight-bold">Masukan Nilai</label>
+                  <label>:</label>
+                  <input type="text" class="form-control col-3">
+                </div>
+
+                <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+                  <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Cari</button>
+                </div>
+
+              </mdb-card-body>
+            </mdb-card>
+
+            <!-- Pencarian Nasabah 2 -->
+            <mdb-card class="mb-3">
+              <mdb-card-body>
+
+                <h5 class="text-primary font-weight-bold">Pencarian Nasabah</h5>
+
+                <div class="row">
+                  <mat-select placeholder="Select an option" class="col-3">
+                    <mat-option value="1">Option1</mat-option>
+                    <mat-option value="2">Option2</mat-option>
+                  </mat-select>
+                </div>
+
+                <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+                  <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Tambah Baru</button>
+                </div>
+
+
+              </mdb-card-body>
+            </mdb-card>
+
+
+            <!-- Duplikat Nasabah -->
+
+            <mdb-card class="mb-3">
+              <mdb-card-body>
+
+                <h5 class="text-primary font-weight-bold">Duplikat Cek Nasabah Baru</h5>
+
+                <!-- Ubah Duplikat Nasabah Coorporate  -->
+                <div class="container pencarian-nasabah">
+                  <h6 class="text-dark">Kode Nasabah CIF Diambil Dari Host</h6>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Kode Nasabah</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Jenis Nasabah</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3" placeholder="Coorporate">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Nama Nasabah</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Alamat</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-9">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Kelurahan</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Kecamatan</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Propinsi</label>
+                    <label>:</label>
+                    <mat-select placeholder="Select an option" class="col-3">
+                      <mat-option value="1">Option1</mat-option>
+                      <mat-option value="2">Option2</mat-option>
+                    </mat-select>
+                    <label class="col-2 font-weight-bold">Kota</label>
+                    <label>:</label>
+                    <mat-select placeholder="Select an option" class="col-3">
+                      <mat-option value="1">Option1</mat-option>
+                      <mat-option value="2">Option2</mat-option>
+                    </mat-select>
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">NPWP</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+                    <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Proses</button>
+                    <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Kembali</button>
+                  </div>
+                </div>
+                <!-- Ubah Duplikat Nasabah Coorporate  -->
+
+                <!-- Ubah Duplikat Nasabah Individu  -->
+                <div class="container pencarian-nasabah">
+                  <h6 class="text-dark">Kode Nasabah CIF Diambil Dari Host</h6>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Kode Nasabah</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Jenis Nasabah</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3" placeholder="Individual">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Nama Nasabah</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Alamat</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-9">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Kelurahan</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Kecamatan</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Propinsi</label>
+                    <label>:</label>
+                    <mat-select placeholder="Select an option" class="col-3">
+                      <mat-option value="1">Option1</mat-option>
+                      <mat-option value="2">Option2</mat-option>
+                    </mat-select>
+                    <label class="col-2 font-weight-bold">Kota</label>
+                    <label>:</label>
+                    <mat-select placeholder="Select an option" class="col-3">
+                      <mat-option value="1">Option1</mat-option>
+                      <mat-option value="2">Option2</mat-option>
+                    </mat-select>
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">NPWP</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Jenis Kartu Identitas</label>
+                    <label>:</label>
+                    <mat-select placeholder="Select an option" class="col-3">
+                      <mat-option value="1">Option1</mat-option>
+                      <mat-option value="2">Option2</mat-option>
+                    </mat-select>
+                    <label class="col-2 font-weight-bold">No Kartu Identitas</label>
+                    <label>:</label>
+                    <input type="text" class="form-control col-3">
+                  </div>
+
+
+                  <div class="row">
+                    <label class="col-2 font-weight-bold">Jenis Kelamin</label>
+                    <label>:</label>
+                    <mat-select placeholder="Select an option" class="col-3">
+                      <mat-option value="1">Option1</mat-option>
+                      <mat-option value="2">Option2</mat-option>
+                    </mat-select>
+                    <label class="col-2 font-weight-bold">Tanggal Lahir</label>
+                    <label>:</label>
+                    <mat-form-field class="col-4">
+                      <input matInput [matDatepicker]="picker" placeholder="Choose a date" style="width: 250px;">
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                  </div>
+
+                  <!-- <div class="row">
+                    <label class="col-2 font-weight-bold">Jenis Jelamin</label>
+                    <label>:</label>
+                    <mat-form-field class="col">
+                      <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                  </div> -->
+
+
+
+                  <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+                    <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Proses</button>
+                    <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Kembali</button>
+                  </div>
+                </div>
+                <!-- Ubah Duplikat Nasabah Individu  -->
+
+              </mdb-card-body>
+            </mdb-card>
+
+          </mdb-card-body>
+        </mdb-card>
+
+      </div>
+    </div>
+  </div>
+</div>
