--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -14,7 +14,7 @@
       <div class="row panel-style">
         <ul class="col border border-light ul-style">
           <li class="font-weight-bold text-white">Tanggal Bisnis: {{tanggal | date:'dd/MM/yyyy'}}</li>
-          <li class="font-weight-bold text-white">Last Login : {{tanggal | date:'dd/MM/yyyy hh:mm'}}</li>
+          <li class="font-weight-bold text-white">Last Login : {{lastlogin | date:'dd/MM/yyyy hh:mm'}}</li>
         </ul>
       </div>
       <div class="row panel-style">
@@ -26,7 +26,7 @@
           <li class="font-weight-bold text-white">IP Anda : {{myIp}}</li>
         </ul>
       </div>
-      <div class="row panel-style">
+      <div class="row panel-style"> 
         <ul class="border border-light ul-style">
           <li class="font-weight-bold text-white">Cabang </li>
           <li class="font-weight-bold text-white">034 | Cabang Utama</li>
