--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -58,15 +58,18 @@
               <div class="form-group row">
                 <label class="col-3 col-form-label font-weight-bold">Pembuatan Nasabah Baru</label>
               </div>
-              <div class="form-group row">
 
+              <div class="form-group row">
                 <div class="col-3">
-                    <select class="form-control" id="selectOption">
-                        <option value="individual">Individual</option>
-                        <option value="corporate">Corporate</option>
-                      </select>
+                  <select class="custom-select" [(ngModel)]="opsi" class="form-control" id="choosenValue" style="width: 250px;">
+                    <option selected disabled>Pilih Salah Satu</option>
+                    <option value="">None</option>
+                    <option value="coorporate">Coorporate</option>
+                    <option value="individual">Individual</option>
+                  </select>
                 </div>
-                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
+                <button [attr.disabled]="selected ? null : ''" (click)="proses()" mdbBtn color="primary" size="sm"
+                  class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
                 <span class="col-6"></span>
               </div>
               <!-- <div class="form-group row">
