--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -61,7 +61,7 @@
 
               <div class="form-group row">
                 <div class="col-3">
-                  <select class="custom-select" [(ngModel)]="opsi" class="form-control" id="choosenValue" style="width: 250px;">
+                  <select class="custom-select" (change)="evenEmit()" class="form-control" id="choosenValue" style="width: 250px;">
                     <option selected disabled>Pilih Salah Satu</option>
                     <option value="">None</option>
                     <option value="coorporate">Coorporate</option>
