--- a/src/app/rekening/barsheet-rekening/barsheet-rekening.component.html
+++ b/src/app/rekening/barsheet-rekening/barsheet-rekening.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Pencarian Data Rekening Nasabah</h5>
+        <h5>DAFTAR NO REKENING YANG TERSEDIA PADA BAR SHEET</h5>
 
         <mdb-card>
           <mdb-card-body>
@@ -23,36 +23,36 @@
                   matSortDisableClear matSortDirection="desc">
                   <!-- Number Column -->
                   <ng-container matColumnDef="number">
-                    <th mat-header-cell *matHeaderCellDef>#</th>
-                    <td mat-cell *matCellDef="let row">{{row.number}}</td>
+                    <th mat-header-cell *matHeaderCellDef>NO REKENING</th>
+                    <td mat-cell *matCellDef="let row">{{row.number * RandomNo }}</td>
                   </ng-container>
 
                   <!-- Title Column -->
-                  <ng-container matColumnDef="title">
+                  <!-- <ng-container matColumnDef="title">
                     <th mat-header-cell *matHeaderCellDef>Title</th>
                     <td mat-cell *matCellDef="let row">{{row.title}}</td>
-                  </ng-container>
+                  </ng-container> -->
 
                   <!-- State Column -->
-                  <ng-container matColumnDef="state">
+                  <!-- <ng-container matColumnDef="state">
                     <th mat-header-cell *matHeaderCellDef>State</th>
                     <td mat-cell *matCellDef="let row">{{row.state}}</td>
-                  </ng-container>
+                  </ng-container> -->
 
                   <!-- Created Column -->
-                  <ng-container matColumnDef="created">
+                  <!-- <ng-container matColumnDef="created">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
                       Created
                     </th>
                     <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
-                  </ng-container>
+                  </ng-container> -->
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
               </div>
 
-              <mat-paginator [length]="resultsLength" [pageSize]="30"></mat-paginator>
+              <mat-paginator [length]="resultsLength" [pageSize]="10"></mat-paginator>
             </div>
 
 
