--- a/src/app/nasabah/pencarian-nasabah/sub-pembuatan-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/sub-pembuatan-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -15,11 +15,15 @@
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <!-- <div class="col-3 pt-2"> -->
                 <div class="col-8 radio ml-3 mt-2">
-                  <label><input type="radio" name="optradio" checked> Kode Nasabah</label><br>
-                  <label><input type="radio" name="optradio"> Kode Cabang</label><br>
-                  <label><input type="radio" name="optradio"> No Kartu Identitas</label><br>
-                  <label><input type="radio" name="optradio"> Alamat</label><br>
-                  <label><input type="radio" name="optradio"> Nama Nasabah + </label><br>
+                  <label><input type="radio" name="optradio" (change)="radioChoosen('Kode Nasabah')" checked>
+                    Kode Nasabah</label><br>
+                  <label><input type="radio" name="optradio" (change)="radioChoosen('Kode Cabang')"> Kode
+                    Cabang</label><br>
+                  <label><input type="radio" name="optradio" (change)="radioChoosen('No Id')"> No
+                    Kartu Identitas</label><br>
+                  <label><input type="radio" name="optradio" (change)="radioChoosen('Alamat')"> Alamat</label><br>
+                  <label><input type="radio" name="optradio" (change)="radioChoosen('Nama')"> Nama
+                    Nasabah + </label><br>
                   <label>Tanggal Lahir</label>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -61,9 +65,8 @@
 
               <div class="form-group row">
                 <div class="col-3">
-                  <select class="custom-select" [(ngModel)]="opsi" class="form-control" id="choosenValue" style="width: 250px;">
+                  <select class="custom-select" (change)="chooseValue()" class="form-control" id="choosenValue" style="width: 250px;">
                     <option selected disabled>Pilih Salah Satu</option>
-                    <option value="">None</option>
                     <option value="coorporate">Coorporate</option>
                     <option value="individual">Individual</option>
                   </select>
