--- a/src/app/nasabah/pencarian-nasabah/sub-pencarian-nasabah/sub-pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/sub-pencarian-nasabah/sub-pencarian-nasabah.component.html
@@ -1,54 +1,17 @@
-<!-- Start your project here-->
-<div class="d-flex flex-column h-100">
-  <div id="outer" class="d-flex flex-column flex-grow">
+<!--Main layout-->
+<div class="bodyContent">
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
+        <h5>Pencarian Nasabah</h5>
 
         <mdb-card class="mb-3">
           <mdb-card-body>
 
-            <h5 class="text-primary font-weight-bold">Pembuatan Rekening Baru</h5>
 
-            <div class="row">
-              <label class="col-2 font-weight-bold">Jenis Rekening</label>
-              <label>:</label>
-              <mat-select placeholder="Select an option" class="col-3">
-                <mat-option value="1">Option1</mat-option>
-                <mat-option value="2">Option2</mat-option>
-              </mat-select>
-            </div>
-
-            <div class="row">
-              <label class="col-2 font-weight-bold">Mata Uang</label>
-              <label>:</label>
-              <mat-select placeholder="Select an option" class="col-3">
-                <mat-option value="1">Option1</mat-option>
-                <mat-option value="2">Option2</mat-option>
-              </mat-select>
-            </div>
-
-            <div class="row">
-              <label class="col-2 font-weight-bold">No Rekening</label>
-              <label>:</label>
-              <input type="text" class="form-control col-3">
-            </div>
-
-            <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
-              <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Tambah Baru</button>
-            </div>
-
-          </mdb-card-body>
-        </mdb-card>
-
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<!-- Pencarian Nasabah -->
-<!-- <mdb-card class="mb-3">
+            <!-- Pencarian Nasabah -->
+            <mdb-card class="mb-3">
               <mdb-card-body>
 
                 <h5 class="text-primary font-weight-bold">Pencarian Nasabah</h5>
@@ -82,10 +45,10 @@
                 </div>
 
               </mdb-card-body>
-            </mdb-card> -->
+            </mdb-card>
 
-<!-- Pencarian Nasabah 2 -->
-<!-- <mdb-card class="mb-3">
+            <!-- Pencarian Nasabah 2 -->
+            <mdb-card class="mb-3">
               <mdb-card-body>
 
                 <h5 class="text-primary font-weight-bold">Pencarian Nasabah</h5>
@@ -103,4 +66,14 @@
 
 
               </mdb-card-body>
-            </mdb-card> -->
+            </mdb-card>
+
+
+          </mdb-card-body>
+        </mdb-card>
+
+
+      </div>
+    </div>
+  </div>
+</div>
